Ajout de section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservia</title>
+    <!-- Style -->
+    <link rel="stylesheet" href="style.css"
+
+    <!-- google font -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+    <!-- End Style --> 
 </head>
+
 <body>
+    <header>
+        <!-- Logo -->
+        <nav>
+
+        </nav>
+    </header>
+<!--Section 1-->
+
+
+<!--Section 2-->
+
+
+
+<!--Section 3-->
+
+
+
+
+<!-- Footer -->
+
+
+    
     
 </body>
 </html>
