--- a/index.html
+++ b/index.html
@@ -93,19 +93,23 @@
             <figure class="image_box">
                 <img src="hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre 3" class="pictures">
                 <figcaption>Hôtel les mouettes</br>Nuit à partir de 76€</figcaption>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </figure>    
             <figure class="image_box">
                 <img src="hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre 4" class="pictures">
                 <figcaption>Hôtel de la mer</br>Nuit à partir de 46€</figcaption>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </figure>             
             <figure class="image_box"> 
                 <img src="hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre 5" class="pictures">
                 <figcaption> Auberge le Panier</br>Nuit à partir de 23€</figcaption>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </figure>   
             
             <figure class="image_box">  
                 <img src="hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre 6" class="pictures">
                 <figcaption>Hôtel chez Amina</br>Nuit à partir de 96€</figcaption>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             </figure>
         </div>
 
