Ajout classes, modifications

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <i class="fas fa-map-marker-alt fa-lg"></i>
                 </span>
                 <input type="text" class="searchterm" placeholder="Marseille,France">
-                <button type="submit" class="searchbutton">Rechercher</button>
+                <button type="submit" class="searchbutton"><i class="fas fa-search"></i> Rechercher</button>
         </div> 
 
         <div class="filters"> 
@@ -56,16 +56,16 @@
             <nav>               
                 <ul class="filter_list">
                     <li>
-                       <a class="list_container"><i class="fas fa-money-bill-wave fa-lg"></i><span class="texte_lien">Economique</span></a>
+                       <a class="list_container" id="list_economique"><i class="fas fa-money-bill-wave fa-lg"></i><span class="texte_lien">Economique</span></a>
                     </li>
                     <li>
-                        <a class="list_container"><i class="fas fa-child fa-lg"></i><span class="texte_lien">Familial</span></a>
+                        <a class="list_container" id="list_familial"><i class="fas fa-child fa-lg"></i><span class="texte_lien">Familial</span></a>
                     </li>
                     <li>
-                        <a class="list_container"><i class="fas fa-heart fa-lg"></i><span class="texte_lien">Romantique</span></a>
+                        <a class="list_container" id="list_romantique"><i class="fas fa-heart fa-lg"></i><span class="texte_lien">Romantique</span></a>
                     </li>
                     <li>
-                        <a class="list_container"><i class="fas fa-dog fa-lg"></i>Animaux autorisés</a>
+                        <a class="list_container" id="list_animaux"><i class="fas fa-dog fa-lg"></i>Animaux autorisés</a>
                     </li>
                 </ul>  
             </nav>
@@ -269,7 +269,7 @@
             </figure>
 
             <figure class="marseille_position">
-                <img src="activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ile au loin à partir des côtes de marseille" class="image">
+                <img src="activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ile au loin à partir des côtes de marseille" class="image">
                 <figcaption class="legende_activites">
                     <span class="hebergement_style">Iles du Frioul
                         
@@ -300,7 +300,7 @@
             </figure>
 
             <figure class="marseille_position">
-                <img src="activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="vue en contre-plongée du palais longchamp" class="image">
+                <img src="activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="vue en contre-plongée du palais longchamp" class="image">
                 <figcaption class="legende_activites">
                     <span class="hebergement_style">Parc Longchamp
 
