--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Reservia</title>
     <!-- Style -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 
     <!-- google font -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
@@ -47,7 +48,7 @@
                     <i class="fas fa-map-marker-alt fa-lg"></i>
                 </span>
                 <input type="text" class="searchterm" placeholder="Marseille,France">
-                <button type="submit" class="searchbutton"><i class="fas fa-search"></i> Rechercher</button>
+                <button type="submit" class="searchbutton"><i class="fas fa-search"></i><span class="search">Rechercher</span></button>
         </div> 
 
         <div class="filters"> 
@@ -90,7 +91,7 @@
                 <figcaption class="legende_hebergement" >
                     <span class="hebergement_style">Auberge La Cannebière
                         
-                    </span></br>Nuit à partir de 25€ </br>
+                    </span><br/>Nuit à partir de 25€ <br/>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -105,7 +106,7 @@
                 <figcaption class="legende_hebergement">
                     <span class="hebergement_style">Hôtel du port
 
-                    </span></br>Nuit à partir de 52€ </br>
+                    </span><br/>Nuit à partir de 52€ <br/>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -192,8 +193,8 @@
                     <p class="legende_texte">
                         <span class="hebergement_style">Hotel Le soleil du</br>matin
 
-                        </span></br>Nuit à partir de 128€</br>
-                    </br>
+                        </span><br/>Nuit à partir de 128€<br/>
+                    <br/>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -209,7 +210,7 @@
                         <span class="hebergement_style">Au coeur de l'eau
 
                         </br>Chambre d'hôtes
-                        </span></br>Nuit à partir de 71€</br>
+                        </span><br/>Nuit à partir de 71€<br/>
                         </br>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -225,7 +226,7 @@
                     <p class="legende_texte">
                         <span class="hebergement_style">Hôtel Tout bleu et</br>Blanc
 
-                        </span></br>Nuit à partir de 68€</br>
+                        </span><br/>Nuit à partir de 68€<br/>
                     </br>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
