modif class et id

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <nav class="nav">   
             <ul class="menu">
                 <li>
-                    <a href="#hebergements">Hébergements</a>
+                    <a class="menu_button" id="hebergements_btn" href="#hebergements">Hébergements</a>
                 </li>
                 <li>
-                    <a href="#Activites">Activités</a>
+                    <a class="menu_button" id="activites_btn" href="#activites_menu">Activités</a>
                 </li>
                 <li>
                     <a id="inscription" href="#">S'inscrire</a>
@@ -79,7 +79,7 @@
 
     </section>
     <!--Section 2-->
-<section>
+<section id="hebergements">
     <div class="heberg_pop">
     <div class="hebergements_box">
         <h2 class="heb_style">Hébergements à Marseille</h2>
@@ -134,7 +134,7 @@
             
             <a href="#">
             <figure class="image_box">
-                <img src="hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre 4" class="pictures">
+                <img src="hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre 4" class="pictures" id="hotel_mer">
                 <figcaption class="legende_hebergement">
                     <span class="hebergement_style">Hôtel de la mer
 
@@ -164,7 +164,7 @@
             </figure>   
             <a href="#">
             <figure class="image_box">  
-                <img src="hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre 6" class="pictures">
+                <img src="hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre 6" class="pictures" id="amina">
                 <figcaption class="legende_hebergement">
                     <span class="hebergement_style">Hôtel chez Amina
 
@@ -244,13 +244,13 @@
 
 
     <!--Section 3-->
-<section class="Activites">
+<section class="Activites" id="activites_menu">
     <h2>Activités à Marseille</h2>
     <div class="activites_container">
 
         <div class="activites_marseille">
             <figure class="activ_photos">
-                <img src="activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="image">
+                <img src="activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="image" id="vieuxport">
                 <figcaption class="legende_activites">
                     <span class="hebergement_style">Vieux Port
 
